--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Perl6 relization of URI — Uniform Resource Identifiers handler
+Perl6 realization of URI — Uniform Resource Identifiers handler
+
+It is can only parse URI for now, and provide some methods to it`s parts.
