--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Perl6 realization of URI — Uniform Resource Identifiers handler
+﻿Perl6 realization of URI - Uniform Resource Identifiers handler
 
-It is can only parse URI for now, and provide some methods to it`s parts.
+A URI implementation using Perl 6 grammars to implement RFC 3986 BNF. Currently only implements parsing.
